# FBS

./: .gitignore  ARCHITECTURE.md  DEPLOY.md  OZON_INTEGRATION_READY.md  PLAN_DEVELOPMENT.md  PROGRESS_UPDATE.md  README.Docker.md  README.md  SumatraPDF-settings.txt  WILDBERRIES_INTEGRATION_READY.md  docker-compose.prod.dist.yml  docker-compose.prod.yml  docker-compose.yml  template-sgtin-WB.xlsx  Акт_выполненных_работ_FBS_MVP.docx.md  План_разработки_FBS_MVP.docx
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260213_add_print_settings.py  20260213_add_warehouses_table.py  20260213_initial.py  20260219_add_auto_print_kiz.py  20260219_add_save_kiz_to_file.py  20260219_rename_order_metadata.py  20260305_add_delivered_to_orderstatus.py  20260305_add_print_settings_dimensions.py  20260307_add_collected_in_app_to_orders.py  20260309_add_label_rotate_kiz_size.py  20260309_add_rotate_all_labels.py  20260309_add_static_invite_code.py  20260309_ozon_barcode_rotate_90_default.py  20260309_user_invite_marketplace_access.py  20260311_add_printer_dpi.py  20260312_add_label_print_mode.py  20260312_add_print_scale.py  20260317_add_label_scale_factor.py  20260421_kiz_groups_pool.py  20260421_orders_sync_guard_unique.py  20260501_add_auto_kiz_autofill.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: router.py
backend/app/core/: __init__.py  celery_app.py  database.py  dependencies.py  exceptions.py  middleware.py  packer_scope.py  security.py
backend/app/models/: __init__.py  audit_log.py  base.py  invite_code.py  kiz_group.py  kiz_parser_error.py  kiz_pool_item.py  kiz_product_mapping.py  marketplace.py  order.py  print_settings.py  scanned_kiz.py  user.py  user_marketplace_access.py  warehouse.py
backend/app/repositories/: __init__.py  marketplace_repository.py  order_repository.py  user_repository.py  warehouse_repository.py
backend/app/schemas/: __init__.py  auth.py  marketplace.py  order.py  user.py
backend/app/services/: __init__.py  kiz_pool_service.py  order_complete_service.py  order_sync_guard.py  order_sync_service.py  ozon_distributed_pace.py  table_builder_service.py  warehouse_service.py
backend/app/services/marketplace/: API_DOCUMENTATION.md  API_DOCUMENTATION_OZON.md  BACKEND_TODO.md  README.md  TODO.md  (+10 more)
backend/app/tasks/: __init__.py  sync_tasks.py
backend/app/utils/: __init__.py  cache.py  logger.py
backend/docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml  nginx.conf
backend/scripts/: fix_completed_orders.py  test_marketplace_integration.py
backend/tests/: README.md  conftest.py  test_auth.py  test_health.py  test_marketplaces.py  test_orders.py  test_print_settings.py  test_security.py  test_users.py  test_warehouses.py
(+88 files in other folders)
